fix: parse pdf questions across page boundaries